WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50884
REGRESSION(
r73307
): MobileMe mail viewing is broken
https://bugs.webkit.org/show_bug.cgi?id=50884
Summary
REGRESSION(r73307): MobileMe mail viewing is broken
Alice Liu
Reported
2010-12-11 23:59:56 PST
viewing the contents of mobileme mail messages has broken, beginning with
r77307
. I hear that
r73866
was supposed to be the fix for the bugs.webkit.org regression caused by
r77307
, but it hasn't fixed the mobileme mail regression, which presumably was unknown until now. steps to repro: 1) login to
http://www.me.com/mail
2) view any message results: most messages will appear to be blank, or appear with just one line of text. <
rdar://problem/8759479
>
Attachments
Patch to fix backtracking to simple parenthenses
(6.68 KB, patch)
2010-12-13 13:46 PST
,
Michael Saboff
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2010-12-13 13:46:15 PST
Created
attachment 76429
[details]
Patch to fix backtracking to simple parenthenses Simple parens are those with a fixed quantity and don't capture. There is a special case for these parentheses and that code didn't handle backtracking from nested parentheses.
Michael Saboff
Comment 2
2010-12-13 14:20:20 PST
Committed
r73962
: <
http://trac.webkit.org/changeset/73962
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug