2010-12-13  Michael Saboff  <msaboff@apple.com>

Reviewed by Oliver Hunt.

        REGRESSION: mobileme mail viewing is broken
        https://bugs.webkit.org/show_bug.cgi?id=50884

        Fixed problem where simple parenthesis (those without capture and
        with a fixed count) where not propagating backtrack to labels for
        nested parentheses.  Also added the nesting level for the parentheses
        state created in that case as well.

        * yarr/RegexJIT.cpp:
        (JSC::Yarr::RegexGenerator::BacktrackDestination::copyBacktrackToLabel):
        (JSC::Yarr::RegexGenerator::TermGenerationState::isLastTerm):
        (JSC::Yarr::RegexGenerator::ParenthesesTail::generateCode):
        (JSC::Yarr::RegexGenerator::generateParenthesesSingle):
2010-12-13  Michael Saboff  <msaboff@apple.com>

        Reviewed by Oliver Hunt.

        REGRESSION: mobileme mail viewing is broken
        https://bugs.webkit.org/show_bug.cgi?id=50884

        Added a test to check parentheses nesting within parentheses that
        don't capture and that are fixed count.  There is special handling
        for this case in the RegExp JIT code.

        * fast/regex/parentheses-expected.txt:
        * fast/regex/script-tests/parentheses.js:


Canonical link: https://commits.webkit.org/64314@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73962 268f45cc-cd09-0410-ab3c-d52691b4dbfc