LayoutTests/fast/regex/script-tests/parentheses.js
@@ -137,6 +137,9 @@ shouldBeNull("regexp31.exec('Committer:')");
 var regexp32 = /\s*(m(\[[^\]]+\])|m(u?)("[^"]+"))\s*/;
 shouldBeNull("regexp32.exec('Committer:')");
 
+var regexp33 = RegExp('^(?:(?:(a)(xyz|[^>"\'\s]*)?)|(/?>)|.[^\w\s>]*)');
+shouldBe("regexp33.exec('> <head>')","['>',undefined,undefined,'>']");
+
 shouldBe("'Hi Bob'.match(/(Rob)|(Bob)|(Robert)|(Bobby)/)", "['Bob',undefined,'Bob',undefined,undefined]");
 
 var successfullyParsed = true;
